# internship_program

./: .gitmodules  README.md
docs/: INFERENCE_ENGINE_ARCHITECTURE.md
tactile_sdk/: .clang-format  .gitattributes  .gitignore  .pylintrc  CMakeLists.txt  Doxyfile  Jenkinsfile  readme.md
tactile_sdk/config/: cfg.py  surface.npy  tactile.rviz  zmq_cfg.py
tactile_sdk/config/firmwares/: firmware-1.3.4.14-low_flow-10.tar  firmware-1.3.4.14-low_flow-20.tar
tactile_sdk/config/models/: DEV2pin_400_de7d860c.onnx
tactile_sdk/config/static/: general_ha4_map_normal.txt  general_ha4_map_point.txt  thumb_ha4_map_normal.txt  thumb_ha4_map_point.txt
tactile_sdk/example_cpp/: CMakeLists.txt  example_callback.cpp  example_callback_cuda.cpp  example_fetch.cpp  example_fetch_cuda.cpp  example_offline.cpp
tactile_sdk/example_py/: example_3d.py  example_callback.py  example_callback_cuda.py  example_fetch.py  example_fetch_cuda.py  example_offline.py  example_plot.py
tactile_sdk/module/tactile_sdk/: CMakeLists.txt  def.h  infer_offline.h  tensor.h  touch.h
tactile_sdk/module/tactile_sdk/src/: board_cfg.cpp  board_cfg.h  build_info.h.in  content_protocol.cpp  content_protocol.h  coreml.cpp  coreml.h  drift_detect.cpp  drift_detect.h  dummy_engine.cpp  dummy_engine.h  engine_base.h  infer.cpp  infer.h  infer_offline.cpp  nms.cpp  nms.h  protocol_def.h  receiver.cpp  receiver.h  stream_protocol.cpp  stream_protocol.h  tensor.cpp  touch.cpp  trt.cpp  trt.h  util.cpp  util.h  version_map.cpp  version_map.h
tactile_sdk/module/tactile_sdk/test/: test_board_cfg.cpp  test_protocol.cpp  test_tensor.cpp  test_touch.cpp  test_trt.cpp  test_util.cpp
tactile_sdk/py/: CMakeLists.txt  build.sh  setup.py  tactile_sdk_py.cpp
tactile_sdk/py/app/: board_cfg.py  board_update.py  sharpa.proto  sharpa_pb2.py  tactile_pub.py  tactile_pub_zmq.py  zmq_wrapper.py
tactile_sdk/py/tactile_sdk/: __init__.py
tactile_sdk/py/tactile_sdk/sharpa/tactile/: __init__.py
tactile_sdk/script/: build.sh  clean.sh  dep_install_mac.sh  feishu_notify.sh  uninstall_mac.sh
tactile_sdk/test_py/: fake_hw.py  test_tactile_sdk.py  test_tactile_zmq.py
tactile_sdk/test_py/cases/: 7.17.pcap  default.pcap
